# ERAv4

./: .gitignore  pyproject.toml
S1_Web_Plugin/: README.md
S1_Web_Plugin/backend/: README.md  app.py  requirements.txt
S1_Web_Plugin/extension/: manifest.json  popup.css  popup.html  popup.js
S2_Simple_EC2_WebPage/: app.py  pyproject.toml
S2_Simple_EC2_WebPage/templates/: index.html
S3_MCQ_App/: app.py  pyproject.toml
S3_MCQ_App/templates/: index.html
S4_MNIST_25k/: MNIST_Model.ipynb  ReadMe.md
S5_MNIST_18k/: MNIST_Opimized_Model.ipynb  ReadMe.md
S6_MNIST_8k/: MNIST_8k_model.ipynb  constants.py  dataset_utils.py  model_utils.py
S7_Cifar10_200k/: CIFAR10.ipynb  best_model.pt  model_v1.py
S8_Cifar100_ResNet/: CIFAR10.ipynb  CIFAR100.ipynb  ReadMe.md  model_v0.py  model_v1.py
S9_ImageNet_EC2/: CIFAR100_Golden.ipynb  CIFAR100_Golden_amp.ipynb  CIFAR100_Golden_amp_compile.ipynb
