[project]
name = "erav4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "albumentationsx>=2.0.11",
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.4",
    "numpy<2.0",
    "opencv-python>=4.11.0.86",
    "torchsummary>=1.5.1",
    "tqdm>=4.67.1",
]
