[project]
name = "erav4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "albumentationsx>=2.0.11",
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.4",
    "numpy<2.0",
    "opencv-python>=4.11.0.86",
    "torch>=2.8.0",
    "torch-lr-finder>=0.2.2",
    "torchsummary>=1.5.1",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
